--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body {
   background-color: #2c948c ;
+  width: auto;
 }
 
 .franklin-gothic-medium {
@@ -17,8 +18,15 @@ body {
   font-size: 40px ;
 }
 
+.contenedor {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .img-1 {
-  
+  margin: 5px;
   border: 10px solid white;
 
 }
+
